workloads/mesh/headplane/02-service-headplane.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.seedmatic.rke2lab/domain: mesh
    io.seedmatic.rke2lab/package: headplane
  labels:
    app: headplane
  name: headplane
  namespace: mesh-system
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: headplane
  type: ClusterIP
